--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>TP Création d'une horloge</title>
 </head>
 <body>
+    <h1 class="title">Horloge Analogique</h1>
     <div id="clock">
         <div class="clockHands">
             <div id="hours"></div> 
@@ -26,13 +27,9 @@
             <div class="numbers">XII</div>
             <div class="numbers ">I</div>
             <div class="numbers ">II</div>
-        
         </div>
         <div class="centerButton"></div>
     </div>
-
-   
-    
 </body>
 <script src="script.js"></script>
 </html>
