--- a/index.html
+++ b/index.html
@@ -7,29 +7,41 @@
     <title>TP Création d'une horloge</title>
 </head>
 <body>
-    <h1 class="title">Horloge Analogique</h1>
-    <div id="clock">
-        <div class="clockHands">
-            <div id="hours"></div> 
-            <div id="minutes"></div>
-            <div id="seconds"></div>   
+    <section class="test">
+        <section class="container">
+        <h1 class="title">Horloge Analogique</h1>
+        <div id="clock">
+            <div class="clockHands">
+                <div id="hours"></div> 
+                <div id="minutes"></div>
+                <div id="seconds"></div>   
+            </div>
+            <div class="clockNumbers">
+                <div class="numbers">III</div>
+                <div class="numbers">IV</div>
+                <div class="numbers">V</div>
+                <div class="numbers">VI</div>
+                <div class="numbers">VII</div>
+                <div class="numbers">VIII</div>
+                <div class="numbers">IX</div>
+                <div class="numbers">X</div>
+                <div class="numbers">XI</div>
+                <div class="numbers">XII</div>
+                <div class="numbers ">I</div>
+                <div class="numbers ">II</div>
+            </div>
+            <div class="centerButton"></div>
         </div>
-        <div class="clockNumbers">
-            <div class="numbers">III</div>
-            <div class="numbers">IV</div>
-            <div class="numbers">V</div>
-            <div class="numbers">VI</div>
-            <div class="numbers">VII</div>
-            <div class="numbers">VIII</div>
-            <div class="numbers">IX</div>
-            <div class="numbers">X</div>
-            <div class="numbers">XI</div>
-            <div class="numbers">XII</div>
-            <div class="numbers ">I</div>
-            <div class="numbers ">II</div>
+    </section>
+    <section>
+        <div class="numeriqueClock">
+            <h1>Horloge Numérique</h1>
+            <div id="clock2"></div>
         </div>
-        <div class="centerButton"></div>
-    </div>
+    </section>
+
+    </section>
+    
 </body>
 <script src="script.js"></script>
 </html>
